--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,119 @@
-pandas~=1.5.3
-nltk~=3.5
-babelpy~=1.0.1
-SPARQLWrapper~=1.8.5
-textblob~=0.15.3
-matplotlib~=3.5.0
-pywsd~=1.2.4
-wn~=0.0.23
-networkx~=2.6.3
-whoosh~=2.7.4
-colorama~=0.4.4
-tqdm~=4.62.2
-spacy~=3.2.1
-ekphrasis~=0.5.4
-torch~=1.13.0
-pyaml~=21.10.1
-PyYAML~=6.0.1
-distex~=0.7.1
-nest-asyncio~=1.5.5
-numpy-indexed~=0.3.5
-Pillow~=9.4.0
+annotated-types==0.7.0
+BabelPy==1.0.1
+blis==1.3.0
+catalogue==2.0.10
+certifi==2025.10.5
+charset-normalizer==3.4.4
+clayrs @ git+https://github.com/petruzzellialessandro/ClayRS@05aff42e1a175c1cc16a3fce75f3ad242c7a4304
+click==8.3.0
+cloudpathlib==0.23.0
+cloudpickle==3.1.1
+colorama==0.4.6
+confection==0.1.5
+cycler==0.12.1
+cymem==2.0.11
+dill==0.4.0
+distex==0.7.2
+ekphrasis==0.5.4
+eventkit==1.0.3
+filelock==3.20.0
+fonttools==4.60.1
+fsspec==2025.9.0
+ftfy==6.3.1
+future==1.0.0
+gensim==4.4.0
+hf-xet==1.1.10
+huggingface-hub==0.35.3
+idna==3.11
+imageio==2.37.0
+Jinja2==3.1.6
+joblib==1.5.2
+kiwisolver==1.4.9
+langcodes==3.5.0
+language_data==1.3.0
+lazy_loader==0.4
+marisa-trie==1.3.1
+MarkupSafe==3.0.3
+matplotlib==3.5.3
+mpmath==1.3.0
+murmurhash==1.0.13
+nest-asyncio==1.5.9
+networkx==3.5
+nltk==3.9.2
+numpy==1.26.4
+numpy-indexed==0.3.7
+nvidia-cublas-cu11==11.10.3.66
+nvidia-cublas-cu12==12.8.4.1
+nvidia-cuda-cupti-cu12==12.8.90
+nvidia-cuda-nvrtc-cu11==11.7.99
+nvidia-cuda-nvrtc-cu12==12.8.93
+nvidia-cuda-runtime-cu11==11.7.99
+nvidia-cuda-runtime-cu12==12.8.90
+nvidia-cudnn-cu11==8.5.0.96
+nvidia-cudnn-cu12==9.10.2.21
+nvidia-cufft-cu12==11.3.3.83
+nvidia-cufile-cu12==1.13.1.3
+nvidia-curand-cu12==10.3.9.90
+nvidia-cusolver-cu12==11.7.3.90
+nvidia-cusparse-cu12==12.5.8.93
+nvidia-cusparselt-cu12==0.7.1
+nvidia-nccl-cu12==2.27.5
+nvidia-nvjitlink-cu12==12.8.93
+nvidia-nvshmem-cu12==3.3.20
+nvidia-nvtx-cu12==12.8.90
+opencv-python==4.12.0.88
+packaging==25.0
+pandas==1.5.3
+pathlib_abc==0.1.1
+pathy==0.11.0
+pillow==12.0.0
+preshed==3.0.10
+pyaml==21.10.1
+pydantic==2.12.3
+pydantic_core==2.41.4
+pyparsing==3.2.5
+python-dateutil==2.9.0.post0
+pytz==2025.2
+pywsd==1.2.5
+PyYAML==6.0.3
+rdflib==7.2.1
+regex==2025.9.18
+requests==2.32.5
+safetensors==0.6.2
+scikit-image==0.25.2
+scikit-learn==1.7.2
+scipy==1.16.2
+sentence-transformers==5.1.1
+six==1.17.0
+smart-open==6.4.0
+spacy==3.8.7
+spacy-legacy==3.0.12
+spacy-loggers==1.0.5
+SPARQLWrapper==1.8.5
+srsly==2.5.1
+style==1.1.0
+sympy==1.14.0
+termcolor==3.1.0
+textblob==0.15.3
+thinc==8.3.6
+threadpoolctl==3.6.0
+tifffile==2025.10.16
+timm==1.0.20
+tokenizers==0.22.1
+torch==2.9.0
+torchvision==0.24.0
+tqdm==4.67.1
+transformers==4.57.1
+triton==3.5.0
+typer==0.4.2
+typing-inspection==0.4.2
+typing_extensions==4.15.0
+ujson==5.11.0
+update==0.0.1
+urllib3==2.5.0
+validators==0.35.0
+wasabi==0.10.1
+wcwidth==0.2.14
+weasel==0.4.1
+Whoosh==2.7.4
+wn==0.0.23
